--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
       <div class="container">
         <header>
           <img src="./ia-logo.gif" alt="ロゴ">
-          <h2>統一認証システム (Unified Authentication System)</h2>
+          <h2>統一まんこ認証システム (Unified Authentication System)</h2>
         </header>
 
         <div class="content">
           <div class="column one">
 
               <div class="legend">
-                ログインサービス: 驚額殿堂のbananaサービス
+                ログインサービス: 驚額殿堂のpussyサービス
               </div>
                         
               <div class="form-element-wrapper">
