--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div id="enter" role="dialog" aria-modal="true" aria-label="ログインダイアログ">
       <div class="container">
         <header>
-          <img src="./logo.png" alt="ロゴ" />
+          <img src="./images/logo.png" alt="ロゴ" />
           <h2>フランクフルトシステム (Frankfurt System)</h2>
         </header>
 
@@ -191,7 +191,7 @@
                   disabled
                   aria-disabled="true"
                 />
-                (<a style="color:#00f">NPTS-13</a> or <a style="color:#00f">NPTS-NAME</a>)
+                (<a style="color:#0000ff">NPTS-13</a> or <a style="color:#0000ff">NPTS-NAME</a>)
               </div>
 
               <div class="form-element-wrapper">
@@ -229,7 +229,7 @@
             <ul class="list list-help">
               <li>このページをブックマークしてください．</li>
               <li>(Please bookmark this page.)</li>
-              <li><span style="font-size: x-small">このページに移行した後のURLをブックマークするようにしてください．</span></li>
+              <li><span style="font-size: x-small">このページに移行した後のURLをブックマークするようにしてください</span></li>
               <li><span style="font-size: x-small">(Please bookmark URL after jumping to this page.)</span></li>
             </ul>
           </div>
