fix and add logos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./script.js"></script>
 
     <style>
+      
       /* ====== #enter 内のみ適用 ====== */
       #enter {
         position: fixed;
@@ -168,7 +169,7 @@
     <div id="enter" role="dialog" aria-modal="true" aria-label="ログインダイアログ">
       <div class="container">
         <header>
-          <img src="./images/logo.png" alt="ロゴ" />
+          <img src="./images/logo1.png" alt="ロゴ" width="265" height="76"/>
           <h2>フランクフルトシステム (Frankfurt System)</h2>
         </header>
 
