--- a/banana-home.html
+++ b/banana-home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>banana(バナナ)</title>
+    <title>banana(バナナ)-home</title>
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの教育支援システム" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,banana">
@@ -12,7 +12,7 @@
     <style>
         body{
             background-color: #fff;
-            font-size: 15px;
+            font-size: 12px;
             font-family: 'ヒラギノ角ゴ Pro W3', 'Arial', 'メイリオ', Verdana, 'ＭＳ Ｐゴシック', sans-serif;
             color: #000;
             margin: 0;
@@ -27,7 +27,6 @@
         display: flex;
         justify-content: space-between;
         align-items: center;  
-        border: 2px solid #f00;           /*後で消す*/
         }
 
         .header1 {
@@ -81,7 +80,6 @@
             display: flex;
             justify-content: space-between;
             align-items: center;  
-            border: 2px solid #00f;           /*後で消す*/
         }
 
         .footer1 {
@@ -110,32 +108,144 @@
         }
         /*フッターここまで*/
         
+
+        /*コンテンツここから*/
+        .content{
+            height:100vh;
+            border: 1px solid #ddd;
+        }
+
+        .top-bar{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: linear-gradient(#fff, #ddd);
+            height:29px; 
+            border-bottom: 4px solid #55a308; 
+            font-weight: bold;
+        }
+
+        .top-bar1{
+            display: flex;
+            height: 100%;
+        }
+
+        .my-page{
+            height: 60%;
+            color:#fff;
+            background-color: #55a308;
+            padding: 4px 12px 5px 12px;
+            text-decoration: none;
+            border-start-start-radius: 3px;
+            border-start-end-radius: 3px;
+            margin:3px 10px auto 10px;
+            box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.3);
+        }
+
+        .my-page:hover{
+            background: linear-gradient(#7cc41a,#55a308);
+        }
+
+        .corses{
+            color: #444;
+            text-decoration: none;
+            height: 100%;
+            border-left: 1px solid #ddd;
+            border-right: 1px solid #ddd;
+            width:120px;
+            display: flex;             
+            justify-content: center;    
+            align-items: center;        
+            text-align: center;
+            margin: auto 0;
+        }
+        .corses:hover{
+            color: #55a308;
+            background: linear-gradient(#f9fdf2,#cce4a5);
+        }
+
+
+        .top-bar2{
+            display: flex;             
+            justify-content: center;    
+            align-items: center;        
+            text-align: center;
+        }
+
+        .resnpo{
+            background-color: #fff;
+            padding-left: 8px;
+            padding-right: 8px;
+            border-radius: 3px;
+            border: 1px solid #f08301;
+            margin-top: 2px;
+            margin-right: 20px;
+        }
+        .resnpo:hover{
+            background-color: #fff2bb;
+        }
+
+        .top-bar2-box{
+            display: flex;             
+            justify-content: center;    
+            align-items: center;        
+            text-align: center;
+            width:80px;
+            height:20px;
+            border: 1px solid #aaa;
+            border-radius: 3px;
+            color:#777;
+            margin-right:10px;
+        }
+
+        .top-bar2-box:hover{
+            color: #2449a8;
+            background: linear-gradient(#fff,#eee);
+        }
+        /*コンテンツここまで*/
     </style>
   </head>
   <body>
     <div class="main">
     <!-- ヘッダーここから -->
-      <div class="header">
-        <div class="header1"><img src="./images/logo2.png" alt="ロゴ" height="60"/></div>
-        <div class="header2">
-            <div class="header-text">
-                <div class="kikan-date">
-                    <div class="toroku-kikan">※自己登録許可期間中</div>
-                    <div class="now-date" id="now-date"></div>
+        <div class="header">
+            <div class="header1"><img src="./images/logo2.png" alt="ロゴ" height="60"/></div>
+            <div class="header2">
+                <div class="header-text">
+                    <div class="kikan-date">
+                        <div class="toroku-kikan">※自己登録許可期間中んぽ</div>
+                        <div class="now-date" id="now-date"></div>
+                    </div>
+                    <div class="header-conf">
+                        んぽたそ
+                        <div class="text-border"></div>
+                        設定
+                        <div class="text-border"></div>
+                        ログアウト
+                    </div>
                 </div>
-                <div class="header-conf">
-                    んぽたそ
-                    <div class="text-border"></div>
-                    設定
-                    <div class="text-border"></div>
-                    ログアウト
-                </div>
+                <div class="header-icon"><img src="./images/npo_user.png" alt="ロゴ" height="45"/></div>
             </div>
-            <div class="header-icon"><img src="./images/npo_user.png" alt="ロゴ" height="45"/></div>
         </div>
-      </div>
     <!-- ヘッダーここまで -->
 
+    <!-- コンテンツここから -->
+        <div class="content">
+            <div class="top-bar">
+                <div class="top-bar1">
+                    <a class="my-page" href="./banana-home.html">マイページ</a>
+                    <a class="corses" href="./banana-home.html">コース</a>
+                    <a class="corses" href="./banana-home.html">ポートフォリオ</a>
+                </div>
+                <div class="top-bar2">
+                    <a href="./resnpo.html"><img class="resnpo" src="./images/resnpo_logo2.png" alt="resnpo" height="20"/></a>
+                    <div class="top-bar2-box">メモ一覧</div>
+                    <div class="top-bar2-box">English</div>
+                </div>
+
+            </div>
+        </div>
+    <!-- コンテンツここまで -->
 
 
 
