--- a/banana-home.html
+++ b/banana-home.html
@@ -765,7 +765,7 @@
                             <img src="./images/NPTS.png" alt="empty_image" width="60">
                             <div class="labels">
                               <div class="code">GENKA25<div class="star-icon"><i class="fa-solid fa-star"></i></div></div>
-                              <a class="title" href="">原価</a>
+                              <a class="title" href="./genka">原価</a>
                               <div class="meta">2025　秋 <br><font color="#555">担当</font> 驚額の殿堂3(スリー)</div>
                               <div class="meta">
                                 <font color="#94cc36"><i class="fa-regular fa-circle-play"></i></font>
@@ -799,7 +799,7 @@
                             <img src="./images/NPTS.png" alt="empty_image" width="60">
                             <div class="labels">
                                 <div class="code">GALLERY<div class="star-icon"><i class="fa-solid fa-star"></i></div></div>
-                              <a class="title" href="">ギャラリー</a>
+                              <a class="title" href="./gallery">ギャラリー</a>
                               <div class="meta">2025　秋 <br><font color="#555">担当</font> 驚額の殿堂3(スリー)</div>
                               <div class="meta">
                                 <font color="#94cc36"><i class="fa-regular fa-circle-play"></i></font>
