fix:テキストの修正

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
               <div class="form-element-wrapper">
                 <button class="form-element form-button" type="submit" name="_eventId_proceed">
-                  Login
+                  Enter
                 </button>
               </div>
             </form>
