--- a/banana-home.html
+++ b/banana-home.html
@@ -892,7 +892,7 @@
         </div>
         
         <div class="footer2">
-            powerd by 
+            powered by 
             <div class="footer-icon"><img src="./images/logo3.png" alt="ロゴ2" height="45"/></div>
         </div>
     </div>
