--- a/gallery.html
+++ b/gallery.html
@@ -424,7 +424,7 @@
         </div>
         
         <div class="footer2">
-            powerd by 
+            powered by 
             <div class="footer-icon"><img src="./images/logo3.png" alt="ロゴ2" height="45"/></div>
         </div>
     </div>
