--- a/genka.html
+++ b/genka.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>banana(バナナ)-home</title>
+    <title>驚額の殿堂3（スリー） | banana(バナナ) - 原価 </title>
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの教育支援システム" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,banana">
@@ -324,7 +324,9 @@
         .genka-container {
             text-align: center;
         }
-
+        .genka-container p {
+            font-size: 64px;
+        }
         /*コンテンツここまで*/
     </style>
 
@@ -333,7 +335,7 @@
     <div class="main">
     <!-- ヘッダーここから -->
         <div class="header">
-            <div class="header1"><img src="./images/logo2.png" alt="ロゴ" height="60"/></div>
+            <h1 class="header1"><img src="./images/logo2.png" alt="驚額殿堂 Dendo of kyogaku" height="60"/></h1>
             <div class="header2">
                 <div class="header-text">
                     <div class="kikan-date">
@@ -348,7 +350,7 @@
                         ログアウト
                     </div>
                 </div>
-                <div class="header-icon"><img src="./images/npo_user.png" alt="ロゴ" height="45"/></div>
+                <div class="header-icon"><img src="./images/npo_user.png" alt="ユーザーアイコン" height="45"/></div>
             </div>
         </div>
     <!-- ヘッダーここまで -->
@@ -357,7 +359,7 @@
         <div class="content">
             <div class="top-bar">
                 <div class="top-bar1">
-                    <div class="my-page"><i class="fa-solid fa-user"></i>マイページ</div>
+                    <a href="./banana-home.html" class="my-page"><i class="fa-solid fa-user"></i>マイページ</a>
                     <div class="courses course-selected"><i class="fa-solid fa-chalkboard-user"></i>　コース</div>
                     <div class="courses"><font size="+1"><i class="fa-solid fa-newspaper"></i></font>　ポートフォリオ</div>
                 </div>
@@ -369,7 +371,7 @@
 
             </div>
             <div class ="middle-bar">
-                <div class="middle-bar-icon"><img src="./images/NPTS.png" alt="empty_image" height="50"/></div>
+                <div class="middle-bar-icon"><img src="./images/NPTS.png" alt="NPTS" height="50"/></div>
                 <div class="middle-bar-contents">
                     <div class="course-meta">
                         <div class="course-meta1">
@@ -404,7 +406,7 @@
                 </div>
             </div>
             <div class="genka-container">
-                <h1>現在、算出中んぽ!!</h1>
+                <p>現在、算出中んぽ!!</p>
             </div>
         </div>
     <!-- コンテンツここまで -->
@@ -423,7 +425,7 @@
         
         <div class="footer2">
             powered by 
-            <div class="footer-icon"><img src="./images/logo3.png" alt="ロゴ2" height="45"/></div>
+            <div class="footer-icon"><img src="./images/logo3.png" alt="Dendo of kyogaku" height="45"/></div>
         </div>
     </div>
     <!-- フッターここまで -->
