--- a/banana-home.html
+++ b/banana-home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの教育支援システム" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,banana">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=720">
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -611,6 +611,35 @@
             margin-right: 20px;
         }
 
+        @media screen and (max-width: 768px) {
+            .main{
+                width: 658px;
+                margin: 0 auto;
+            }
+            .main-grid{
+                flex-direction: column-reverse;
+            }
+
+            .main-grid-left{
+                width: 100%;
+            }
+
+            .badge {
+                margin-right: 42px;
+            }
+            .main-grid-right{
+                width: 100%;
+            }
+
+            .works-container{
+                margin: 0 auto;
+            }
+
+            .toroku-container{
+                margin: 20px auto;
+            }
+        }
+
 
         /*コンテンツここまで*/
     </style>
@@ -778,11 +807,12 @@
                               </div>
                             </div>
                         </article>
+                        <!--
                         <article class="course-card" data-year="2025">
                             <img src="./images/NPTS.png" alt="NPTS" width="60">
                             <div class="labels">
-                              <div class="code">DOUJIN25<div class="star-icon"><i class="fa-solid fa-star"></i></div></div>
-                              <a class="title" href="">同人誌</a>
+                              <div class="code">TUTUMI25<div class="star-icon"><i class="fa-solid fa-star"></i></div></div>
+                              <a class="title" href="">包み紙</a>
                               <div class="meta">2025　秋 <br><font color="#555">担当</font> 驚額の殿堂3(スリー)</div>
                               <div class="meta">
                                 <font color="#94cc36"><i class="fa-regular fa-circle-play"></i></font>
@@ -795,6 +825,7 @@
                               </div>
                             </div>
                         </article>
+                        -->
                         <article class="course-card" data-year="2025">
                             <img src="./images/gallery_icon.png" alt="gallery" width="60">
                             <div class="labels">
