--- a/genka.html
+++ b/genka.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの教育支援システム" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,banana">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=720">
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -326,6 +326,24 @@
         }
         .genka-container p {
             font-size: 64px;
+        }
+
+        @media screen and (max-width: 768px) {
+            .main{
+                width: 658px;
+                margin: 0 auto;
+            }
+
+            .middle-bar-contents{
+                width: 87%;
+            }
+            .middle-bar-button-container1{
+                margin-left : -80px;
+                margin-right : 10px;
+            }
+            .middle-bar-button {
+                width: 70px;
+            }
         }
         /*コンテンツここまで*/
     </style>
