--- a/resnpo.html
+++ b/resnpo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの出席管理ツール" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,resnpo">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=720">
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
 
