--- a/banana-home.html
+++ b/banana-home.html
@@ -30,6 +30,12 @@
         align-items: center;  
         }
 
+        h1{
+            padding:0;
+            margin:0;
+            line-height:1.0;
+        }
+    
         .header1 {
             text-align: center;
         }
