--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             <ul class="list list-help">
               <li>このページをブックマークしてください．</li>
               <li>(Please bookmark this page.)</li>
-              <li>このページに移行した後のURLをブックマークするようにしてください</li>
-              <li>(Please bookmark URL after jumping to this page.)</li>
+              <li>このページから移行した後のURLをブックマークするようにしてください</li>
+              <li>(Please bookmark the URL after moving from this page.)</li>
             </ul>
           </div>
         </div>
