feat:グランプリフォーム

--- a/banana-home.html
+++ b/banana-home.html
@@ -245,7 +245,8 @@
             font-weight:bold;
             display: flex;
             height:28px;
-            width: 85px;
+            padding-left:10px;
+            padding-right: 10px;
             border: 1px solid #ddd;
             margin-top:4px;
             text-align: center;
@@ -720,6 +721,7 @@
                         <div class="middle-bar-button-gap"></div>
                         <a href="https://x.com/kyogaku_dendo" class="middle-bar-button">ツイッター</a>
                         <a href="https://www.instagram.com/kyogaku_dendo/" class="middle-bar-button">インスタグラム</a>
+                        <a href="https://search.sohosai.com/vote" class="middle-bar-button">雙峰祭グランプリ</a>
 
                     </div>
                 </div>
@@ -749,8 +751,7 @@
                             <div class="news-item"
                               data-date="2025-10-12"
                               data-content='今年も雙峰祭グランプリがあるんぽ！ぜひ、「驚額の殿堂3（スリー）」に投票お願いするんぽ！<br>
-                              <a href="">雙峰祭グランプリ投票フォーム</a><br>
-                              まだリンク先はないんぽ！'>
+                              <a href="https://search.sohosai.com/vote">雙峰祭グランプリ投票フォーム</a>'>
                               <span class="news-date">2025-10-12</span>
                               <span class="news-title"><font color="#ff4444"><i class="fa-solid fa-volume-high"></i></font>　雙峰祭グランプリは「驚額の殿堂3（スリー）」に投票お願いするんぽ！</span>
                             </div>
