--- a/banana-home.html
+++ b/banana-home.html
@@ -836,12 +836,11 @@
                               </div>
                             </div>
                         </article>
-                        <!--
                         <article class="course-card" data-year="2025">
                             <img src="./images/NPTS.png" alt="NPTS" width="60">
                             <div class="labels">
                               <div class="code">TUTUMI25<div class="star-icon"><i class="fa-solid fa-star"></i></div></div>
-                              <a class="title" href="">包み紙</a>
+                              <a class="title" href="./tsutsumigami.html">包み紙</a>
                               <div class="meta">2025　秋 <br><font color="#555">担当</font> 驚額の殿堂3(スリー)</div>
                               <div class="meta">
                                 <font color="#94cc36"><i class="fa-regular fa-circle-play"></i></font>
@@ -854,7 +853,6 @@
                               </div>
                             </div>
                         </article>
-                        -->
                         <article class="course-card" data-year="2025">
                             <img src="./images/gallery_icon.png" alt="gallery" width="60">
                             <div class="labels">
