--- a/banana-home.html
+++ b/banana-home.html
@@ -439,6 +439,7 @@
             align-items: center;
             padding-top:40px;
             padding-left: 30px;
+            font-size: 16px;
         }
 
 
@@ -744,7 +745,8 @@
                               data-content='
                               驚額の殿堂 3（スリー）は今年もフランクフルトをうるんぽ！<br>
                               11/2(日), 11/3(月) に人文社会学系棟前でやるんぽ<br>
-                              皆様のご来店をお待ちしておりますんぽ！'>
+                              皆様のご来店をお待ちしておりますんぽ！<br><br>
+                              <a href="https://maps.app.goo.gl/SqM2Q7n6iJfy8fZD8">Googleマップでみる</a>'>
                               <span class="news-date">2025-10-12</span>
                               <span class="news-title"><font color="#ff4444"><i class="fa-solid fa-volume-high"></i>　</font><font size="+2">11/2~3 人文社会学系棟前</font> 雙峰祭でお待ちしてるんぽ！ </span>
                             </div>
