--- a/doujin25.html
+++ b/doujin25.html
@@ -330,6 +330,7 @@
         .main-container{
             width: 90%;
             margin: 0 auto;
+            font-size: 1rem;
         }
 
         .article{
@@ -354,10 +355,10 @@
 
         .title::before {
         content: "";
-        width: 6px;      
+        width: 6px;
         height: 6px;
         border-radius: 50%;
-        background: #55a308;   
+        background: #55a308;
         flex: 0 0 auto;
         }
 
@@ -436,8 +437,8 @@
                 <div class="middle-bar-contents">
                     <div class="course-meta">
                         <div class="course-meta1">
-                            <div class="middle-bar-course-number">TSUTSUMI25</div>
-                            <div class="middle-bar-course-name">包み紙</div>
+                            <div class="middle-bar-course-number">DOUJIN25</div>
+                            <div class="middle-bar-course-name">技術同人誌『フランクフルト』</div>
                         </div>
                         <div class="course-meta2">
                             <div class="course-meta2-movie">
@@ -467,7 +468,9 @@
                 </div>
             </div>
             <div class="main-container">
-                <h2>タイトル一覧</h2>
+                <h2>技術同人誌</h2>
+                <p>雙峰祭でメンバー有志による技術同人誌『フランクフルト』を発売するんぽ～。<br>店頭では物理本とPDF版を両方頒布して、別途<a href="https://x.com/comictsukuba">コミックつくば！</a>さんでも物理本を頒布するんぽ～</p>
+                <h2>タイトル一覧（暫定）</h2>
                 <ul>
                     <li class="article">
                         <div class="title">
@@ -475,16 +478,7 @@
                         </div>
                         <div class="bar"></div>
                         <div class="author">
-                            chururi
-                        </div>
-                    </li>
-                    <li class="article">
-                        <div class="title">
-                            短編小説
-                        </div>
-                        <div class="bar"></div>
-                        <div class="author">
-                            slimalized
+                            chururi (<a href="https://x.com/chururi_">Twitter</a>, <a href="https://itsu.dev">個人サイト</a>)
                         </div>
                     </li>
                     <li class="article">
@@ -493,7 +487,7 @@
                         </div>
                         <div class="bar"></div>
                         <div class="author">
-                            lapla
+                            lapla (<a href="https://twitter.lapla.dev">Twitter</a>, <a href="https://lapla.dev/about">個人サイト</a>)
                         </div>
                     </li>
                     <li class="article">
@@ -516,15 +510,6 @@
                     </li>
                     <li class="article">
                         <div class="title">
-                            フランクフルトの美味しい食べかた
-                        </div>
-                        <div class="bar"></div>
-                        <div class="author">
-                            slimalized
-                        </div>
-                    </li>
-                    <li class="article">
-                        <div class="title">
                             HCIカーソル探訪
                         </div>
                         <div class="bar"></div>
@@ -538,17 +523,24 @@
                         </div>
                         <div class="bar"></div>
                         <div class="author">
-                            asuto
+                            asuto (<a href="https://asuto.dev/about">個人サイト</a>)
+                        </div>
+                    </li>
+                                        <li class="article">
+                        <div class="title">
+                            フランクフルトの美味しい食べかた
+                        </div>
+                        <div class="bar"></div>
+                        <div class="author">
+                            驚額の殿堂3（スリー）一同
                         </div>
                     </li>
                 </ul>
-
+                <h2>値段（暫定、雙峰祭特別価格）</h2>
+                <p>物理本：300円（店頭で購入すると無料でPDF版も付くんぽ）<br>PDF版のみ：300円（店頭販売のみ）</p>
             </div>
         </div>
     <!-- コンテンツここまで -->
-
-
-
     <!-- フッターここから -->
     <div class="footer">
         <div class="footer1">
@@ -558,7 +550,6 @@
             </div>
             <div class="footer-text">マニュアル パーソナルデータについて</div>
         </div>
-        
         <div class="footer2">
             powered by 
             <div class="footer-icon"><img src="./images/logo3.png" alt="Dendo of kyogaku" height="45"/></div>
