--- a/gallery.html
+++ b/gallery.html
@@ -393,7 +393,7 @@
 
             </div>
             <div class ="middle-bar">
-                <div class="middle-bar-icon"><img src="./images/NPTS.png" alt="NPTS" height="50"/></div>
+                <div class="middle-bar-icon"><img src="./images/gallery_icon.png" alt="NPTS" height="50"/></div>
                 <div class="middle-bar-contents">
                     <div class="course-meta">
                         <div class="course-meta1">
