--- a/banana-home.html
+++ b/banana-home.html
@@ -839,8 +839,8 @@
                         <article class="course-card" data-year="2025">
                             <img src="./images/NPTS.png" alt="NPTS" width="60">
                             <div class="labels">
-                              <div class="code">TUTUMI25<div class="star-icon"><i class="fa-solid fa-star"></i></div></div>
-                              <a class="title" href="./tsutsumigami.html">包み紙</a>
+                              <div class="code">DOUJIN25<div class="star-icon"><i class="fa-solid fa-star"></i></div></div>
+                              <a class="title" href="./doujin25.html">技術同人誌『フランクフルト』</a>
                               <div class="meta">2025　秋 <br><font color="#555">担当</font> 驚額の殿堂3(スリー)</div>
                               <div class="meta">
                                 <font color="#94cc36"><i class="fa-regular fa-circle-play"></i></font>
