来訪者->お客様

--- a/banana-home.html
+++ b/banana-home.html
@@ -970,7 +970,7 @@
             if (count !== null) {
             const el = document.querySelector(".middle-bar-my-page");
             const span = document.createElement("span");
-            span.textContent = `${count}人目の来訪者さんのマイページ`;
+            span.textContent = `${count}人目のお客様のマイページ`;
             el.insertAdjacentElement("beforeend", span); 
             }
         })();
