--- a/banana-home.html
+++ b/banana-home.html
@@ -6,6 +6,17 @@
     <meta name="description" content="焼きそばホグワーツの教育支援システム" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,banana">
     <meta name="viewport" content="width=720">
+
+    <meta property="og:title" content="驚額の殿堂3（スリー）| ホーム" />
+    <meta property="og:description" content="人間系学系棟前で、圧倒的な低価格で美味しいフランクフルトを提供します！" />
+    <meta property="og:image" content="https://kyogaku.yokohama.dev/images/logo1.png" />
+    <meta property="og:url" content="https://kyogaku.yokohama.dev/banana-home.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="驚額の殿堂3（スリー）| ホーム" />
+    <meta name="twitter:description" content="人間系学系棟前で、圧倒的な低価格で美味しいフランクフルトを提供します！" />
+    <meta name="twitter:image" content="https://kyogaku.yokohama.dev/images/logo1.png" />
+
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
