--- a/doujin25.html
+++ b/doujin25.html
@@ -1,11 +1,22 @@
 <!doctype html>
 <html>
   <head>
-    <title>驚額の殿堂3（スリー） | banana(バナナ) - 原価 </title>
+    <title>驚額の殿堂3（スリー） | banana(バナナ) - 技術同人誌 </title>
     <meta charset="utf-8" />
     <meta name="description" content="焼きそばホグワーツの教育支援システム" />
     <meta name="keywords" content="雙峰祭, フランクフルト, 驚額の殿堂,banana">
     <meta name="viewport" content="width=720">
+
+    <meta property="og:title" content="驚額の殿堂3（スリー）| 技術同人誌" />
+    <meta property="og:description" content="ことしは技術同人誌『フランクフルト』を頒布するんぽ〜！" />
+    <meta property="og:image" content="https://kyogaku.yokohama.dev/images/logo1.png" />
+    <meta property="og:url" content="https://kyogaku.yokohama.dev/doujin25.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="驚額の殿堂3（スリー）| 技術同人誌" />
+    <meta name="twitter:description" content="ことしは技術同人誌『フランクフルト』を頒布するんぽ〜！" />
+    <meta name="twitter:image" content="https://kyogaku.yokohama.dev/images/logo1.png" />
+
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
