--- a/doujin25.html
+++ b/doujin25.html
@@ -525,7 +525,7 @@
                         </div>
                         <div class="bar"></div>
                         <div class="author">
-                            inaniwaudon
+                            いなにわうどん (me[at]yokohama.dev)
                         </div>
                     </li>
                     <li class="article">
