--- a/doujin25.html
+++ b/doujin25.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="驚額の殿堂3（スリー）| 技術同人誌" />
     <meta property="og:description" content="ことしは技術同人誌『フランクフルト』を頒布するんぽ〜！" />
-    <meta property="og:image" content="https://kyogaku.yokohama.dev/images/logo1.png" />
+    <meta property="og:image" content="./images/gallery/frank.webp" />
     <meta property="og:url" content="https://kyogaku.yokohama.dev/doujin25.html" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
