--- a/banana-home.html
+++ b/banana-home.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="驚額の殿堂3（スリー）| ホーム" />
     <meta property="og:description" content="人間系学系棟前で、圧倒的な低価格で美味しいフランクフルトを提供します！" />
-    <meta property="og:image" content="./images/gallery/frank.webp" />
+    <meta property="og:image" content="https://kyogaku.yokohama.dev/images/gallery/frank.webp" />
     <meta property="og:url" content="https://kyogaku.yokohama.dev/banana-home.html" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
