--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="驚額の殿堂3（スリー）| ギャラリー" />
     <meta property="og:description" content="たくさん写真を公開しちゃうんぽ！" />
-    <meta property="og:image" content="./images/gallery/frank.webp" />
+    <meta property="og:image" content="https://kyogaku.yokohama.dev/images/gallery/frank.webp" />
     <meta property="og:url" content="https://kyogaku.yokohama.dev/gallery.html" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
