--- a/genka.html
+++ b/genka.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="驚額の殿堂3（スリー）| 原価" />
     <meta property="og:description" content="せきららに原価を公開しちゃうんぽ！" />
-    <meta property="og:image" content="./images/gallery/frank.webp" />
+    <meta property="og:image" content="https://kyogaku.yokohama.dev/images/gallery/frank.webp" />
     <meta property="og:url" content="https://kyogaku.yokohama.dev/genka.html" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
