--- a/doujin25.html
+++ b/doujin25.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="驚額の殿堂3（スリー）| 技術同人誌" />
     <meta name="twitter:description" content="ことしは技術同人誌『フランクフルト』を頒布するんぽ〜！" />
-    <meta name="twitter:image" content="https://kyogaku.yokohama.dev/images/logo1.png" />
+    <meta name="twitter:image" content="https://kyogaku.yokohama.dev/images/gallery/frank.webp" />
 
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
