--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="驚額の殿堂3（スリー）| ギャラリー" />
     <meta name="twitter:description" content="たくさん写真を公開しちゃうんぽ！" />
-    <meta name="twitter:image" content="https://kyogaku.yokohama.dev/images/logo1.png" />
+    <meta name="twitter:image" content="https://kyogaku.yokohama.dev/images/gallery/frank.webp" />
 
     <link href="./style.css" rel="stylesheet">
     <script src="./script.js"></script>
