--- a/doujin25.html
+++ b/doujin25.html
@@ -480,7 +480,7 @@
             </div>
             <div class="main-container">
                 <h2>技術同人誌</h2>
-                <p>雙峰祭でメンバー有志による技術同人誌『フランクフルト』を発売するんぽ～。<br>店頭では物理本とPDF版を両方頒布して、別途<a href="https://x.com/comictsukuba">コミックつくば！</a>さんでも物理本を頒布するんぽ～</p>
+                <p>雙峰祭でフランクフルト（食品）と並行してメンバー有志による技術同人誌『フランクフルト』を発売するんぽ～。<br>店頭では物理本とPDF版を両方頒布して、別途<a href="https://x.com/comictsukuba">コミックつくば！</a>さんでも物理本を頒布するんぽ～</p>
                 <h2>タイトル一覧（暫定）</h2>
                 <ul>
                     <li class="article">
