--- a/doujin25.html
+++ b/doujin25.html
@@ -507,7 +507,7 @@
                         </div>
                         <div class="bar"></div>
                         <div class="author">
-                            Ryoga
+                            Ryoga (<a href="https://x.com/Ryoga_exe">Twitter</a>)
                         </div>
                     </li>
                     <li class="article">
