--- a/doujin25.html
+++ b/doujin25.html
@@ -494,7 +494,7 @@
                     </li>
                     <li class="article">
                         <div class="title">
-                            シスプロ入門のための自作タスクスケジューラー
+                            システムプログラミング入門のための自作スレッドスケジューラー
                         </div>
                         <div class="bar"></div>
                         <div class="author">
