--- a/doujin25.html
+++ b/doujin25.html
@@ -516,7 +516,7 @@
                         </div>
                         <div class="bar"></div>
                         <div class="author">
-                            motorailgun
+                            motorailgun (<a href="https://x.com/motorailgun_s">Twitter</a>)
                         </div>
                     </li>
                     <li class="article">
